# musubi

./: .dockerignore  .env.example  .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA001-PHASE2-HANDOFF.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  docker-compose.yml  mcp_server.py  openapi.yaml  patch_orchestration.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_fastapi_test.py  run_manual.py  run_manual2.py  run_test.py  seed_memories.py  test_manual.py  test_ping_issue.py
.agents/skills/: README.md
.claude/agents/: musubi-reviewer.md  musubi-slice-worker.md  musubi-spec-author.md
.claude/skills/: README.md
.cursor/rules/: musubi.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cross-slice.md  feature_request.yml  slice-work.md  spec-update.md
.github/workflows/: auto-digest-bump.yml  ci.yml  evals.yml  integration.yml  publish-core-image.yml  release-please.yml  vault-check.yml
.operator/: README.md  backlog.md
.operator/prompts/: followup-next-slice.md.template  slice-start.md.template
.operator/scripts/: board.py  claimable.py  handoff-audit.py  merge-flow.py  render-prompt.py
_design/: lifecycle-cursor-and-clustering-redesign.md
deploy/ansible/: README.md  bootstrap.yml  config.yml  deploy.yml  health.yml  inventory.yml  requirements.yml  setup-control-host.sh  update.yml  vault.example.yml
deploy/backup/: README.md  backup.yml  drill.yml  musubi-backup.sh  restore.yml
deploy/docker/: .env.production.example  README.md  kong.yml  smoke-health.sh
deploy/kong/: musubi-prod.yml
deploy/loki/: loki.yml
deploy/migration/: README.md  conftest.py  poc-to-v1.py  state.json
deploy/prometheus/: alertmanager.yml  prometheus.yml
deploy/runbooks/: first-deploy.md  manual-recovery.md  upgrade-image.md  upgrade.md
deploy/smoke/: check_api.sh  check_capture.sh  check_consumers.sh  check_observability.sh  check_thoughts.sh  lib.sh  verify.sh
deploy/systemd/: musubi-api.service  musubi-lifecycle-worker.service  musubi-vault-sync.service
deploy/tempo/: tempo.yml
deploy/test-env/: .env.test  README.md  docker-compose.test.yml
docs/: AGENT-PROCESS.md
docs/Musubi/: CLAUDE.md  README.md
docs/architecture/: CLAUDE.md  README.md
musubi/: __init__.py  collections.py  config.py  embedding.py  memory.py  server.py  thoughts.py
scripts/: backfill_identity_family.py  force_synthesis.py  install.sh  musubi-deploy  uninstall.sh  update.sh
scripts/perf/: README.md  seed_corpus.py  telemetry.sh
spike-notes/: 00-sequencing-deviation.md  acceptance-invariants.md  art-001-global-search.md  art-001-qdrant-occ.md  qdrant-digest-record.txt
src/musubi/: __init__.py  config.py  settings.py
tests/: conftest.py  test_chunked_embedder.py  test_collections.py  test_config.py  test_embedding.py  test_integration.py  test_memory.py  test_scaffold.py  test_thoughts.py
tests/adapters/: test_livekit.py  test_mcp.py  test_mcp_canonical_tools.py  test_ret007_adapter_warnings.py  test_ret007_livekit_channel.py
tests/api/: conftest.py  sec003_route_inventory.py  test_api_v0_read.py  test_api_v0_write.py  test_artifact_upload_indexing.py  test_auth001_exclusions.py  test_auth001_token_scope.py  test_bootstrap.py  test_concept_writes.py  test_context.py  test_idem001_replay_and_race.py  test_idem003_durable_receipts.py  test_idempotency_contract.py  test_idempotency_dependency.py  test_idempotency_lease_cache.py  test_idempotency_pipeline_integration.py  test_rate_limits.py  test_req10_single_worker_fail_closed.py  test_req5_response_fidelity.py  test_req7_token_identity_invariant.py  test_req8_public_invalid_protected_bearer.py  test_ret002_context_accounting.py  test_ret002_streaming_access.py  test_ret007_http_warnings.py  test_ret007_status_and_telemetry.py  test_ret007_telemetry_boundary.py  test_ret009_include_lineage.py  test_ret011_streaming_namespace.py  test_retrieve_dq_001_content_truncation.py  test_retrieve_recent.py  test_retrieve_ret003_mutation_proof.py  test_retrieve_ret003_wire.py  test_retrieve_stream.py  test_retrieve_wildcards.py  test_sec002_idempotency_auth.py  test_sec003_namespace_scope.py  test_sec004_contradictions_scope.py  test_thoughts_check_history.py  test_thoughts_stream.py  test_thoughts_writes_plane.py  (+1 more)
tests/auth/: __init__.py  test_auth.py
tests/cli/: test_cli_context.py  test_cli_promote.py  test_validate.py
tests/evals/: test_ci_bootstrap_contract.py  test_cli.py  test_evals_contract.py  test_live_gate.py  test_ret004_real_behavior.py  test_scheduled_corpus_contract.py  test_scheduled_gate.py  test_toy_implementation_reds.py
tests/ingestion/: test_capture.py
tests/integration/: _livekit_fixtures.py  conftest.py  test_capture_perf.py  test_harness.py  test_livekit_e2e.py  test_smoke.py
tests/lifecycle/: test_c6_event_loss.py  test_c6b_atomicity.py  test_custom_intent_seam.py  test_demotion.py  test_emitters.py  test_h5_unify_state_mutation.py  test_life006_alerts.py  test_life009_semantic_supersession.py  test_life011_promotion_saga.py  test_lifecycle.py  test_maturation.py  test_promotion.py  test_reflection.py  test_runner.py  test_runner_metrics.py  test_s1_store_policy.py  test_s2_coordinator_admission.py  test_s3_coordinator_apply.py  test_s3_mark_applied_replay.py  test_s4_reconcile.py  test_synthesis.py
tests/llm/: test_ollama.py  test_promotion_client.py  test_prompt_boundary_structural.py  test_reflection_client.py
tests/migration/: conftest.py  test_poc_to_v1.py
tests/observability/: conftest.py  test_alerts.py  test_observability.py  test_scrape_server.py  test_tracing.py
tests/ops/: test_1password_connect_deploy.py  test_ansible.py  test_backup.py  test_backup_scheduler.py  test_board.py  test_cleanup.py  test_compose.py  test_first_deploy_smoke.py  test_gpu.py  test_handoff_audit.py  test_image_publish.py  test_lifecycle_storage_doc_drift.py  test_perf_seed.py  test_prometheus.py  test_render_prompt.py  (+5 more)
(+767 files in other folders)
