[project]
name = "musubi"
version = "0.6.0"
description = "Shared memory + knowledge plane for a small-team AI agent fleet. See the Obsidian architecture vault for design."
requires-python = ">=3.12"
authors = [{ name = "Eric Mey", email = "ericmey@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"

dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "svix-ksuid>=0.6",
    "qdrant-client>=1.12",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.10",
    "ruamel.yaml>=0.18",
    "watchdog>=4.0",
    "mcp>=1.2.0",
    # Canonical API framework — chosen by ADR-0011 + ADR-0013 (pydantic-first
    # OpenAPI generation). Required by slice-api-v0-read for the FastAPI
    # scaffolding the slice spec calls for.
    "fastapi>=0.115",
    # Multipart parsing for POST /v1/artifacts file uploads
    # (slice-api-v0-write).

    "python-multipart>=0.0.9",
    "tokenizers>=0.20",
    # Operator CLI (`musubi promote force/reject`, future subcommands).
    # Typer leans on type hints, which fits the rest of the codebase.
    "typer>=0.12",
]

[project.scripts]
musubi = "musubi.cli.main:app"


[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.27",
]
dev = [
    "pytest>=8",
    "types-PyYAML>=6",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "hypothesis>=6",
    "mypy>=1.11",
    "ruff>=0.6",
    # Vault tooling (docs/Musubi/_tools/*.py) reads YAML frontmatter.
    "pyyaml>=6",

    "types-PyYAML",
    "jinja2>=3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musubi"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]   # line length — handled elsewhere

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
# FastAPI's Depends/Query/Body/Path/File patterns intentionally use
# function-call defaults; B008 flags them but the framework requires
# this shape. UP046 prefers PEP 695 type params on generics — Page is
# a Generic[T] over a pydantic BaseModel, which doesn't translate
# cleanly. Both are framework-specific exceptions scoped to the api
# package.
"src/musubi/api/*" = ["B008", "UP046"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["ksuid.*", "svix_ksuid.*", "ksuid", "qdrant_client.*", "tokenizers", "tokenizers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: requires Qdrant / TEI / Ollama; skipped by default",
    "property: Hypothesis-based property test",
]
# Local-mode qdrant-client warns that payload indexes are no-ops. We verify
# index behavior against a mocked client (see tests/store/test_indexes.py)
# and against a real server in integration tests, so this warning is noise.
filterwarnings = [
    "ignore:Payload indexes have no effect in the local Qdrant:UserWarning",
]

# --------------------------------------------------------------------------
# Coverage — enforced by `make check` and the CI workflow. The 85 % floor
# is the Definition of Done's baseline; slices under `src/musubi/planes/**`
# and `src/musubi/retrieve/**` carry a 90 % expectation documented in
# docs/Musubi/00-index/definition-of-done.md and verified by review
# rather than pytest (no per-module fail_under exists in coverage.py).
# --------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["musubi"]
omit = [
    # Thin protocol stubs + __init__ re-exports — no branchable logic.
    "src/musubi/*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.$",  # Protocol method bodies
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
